Menu is working but there is a bug due to how .focus() is handled

--- a/src/public_site/admin_signup/admin_signup.scss
+++ b/src/public_site/admin_signup/admin_signup.scss
@@ -32,3 +32,13 @@
     margin-bottom: 20px;
     max-width: 272.47px;
 }
+
+.admin_signin_datanotfound {
+    color: red;
+    text-align: center;
+    max-width: 230px;
+}
+
+.admin_signup_toast {
+    color: white;
+}
